build: release 25.8.3