@@ -2789,10 +2789,10 @@ public class PiePlot extends Plot implements Cloneable, Serializable {
                 double mid = this.startAngle + (this.direction.getFactor()
                         * ((runningTotal - v / 2.0) * 360) / totalValue);
                 if (Math.cos(Math.toRadians(mid)) < 0.0) {
-                    leftKeys.addValue(key, new Double(mid));
+                    leftKeys.addValue(key, Double.valueOf(mid));
                 }
                 else {
-                    rightKeys.addValue(key, new Double(mid));
+                    rightKeys.addValue(key, Double.valueOf(mid));
                 }
             }
         }
