@@ -122,7 +122,7 @@ public class LayeredBarRenderer extends BarRenderer implements Serializable {
      *               the maximum).
      */
     public void setSeriesBarWidth(int series, double width) {
-        this.seriesBarWidthList.set(series, new Double(width));
+        this.seriesBarWidthList.set(series, Double.valueOf(width));
     }
 
     /**
