@@ -110,7 +110,7 @@ public class TimeSeriesDataItem implements Cloneable, Comparable<TimeSeriesDataI
      * @param value  the value associated with the time period.
      */
     public TimeSeriesDataItem(RegularTimePeriod period, double value) {
-        this(period, new Double(value));
+        this(period, Double.valueOf(value));
     }
 
     /**
