@@ -409,7 +409,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param y  the y value.
      */
     public void add(double x, double y) {
-        add(new Double(x), new Double(y), true);
+        add(Double.valueOf(x), Double.valueOf(y), true);
     }
 
     /**
@@ -423,7 +423,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *                listeners.
      */
     public void add(double x, double y, boolean notify) {
-        add(new Double(x), new Double(y), notify);
+        add(Double.valueOf(x), Double.valueOf(y), notify);
     }
 
     /**
@@ -435,7 +435,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @param y  the y value (<code>null</code> permitted).
      */
     public void add(double x, Number y) {
-        add(new Double(x), y);
+        add(Double.valueOf(x), y);
     }
 
     /**
@@ -450,7 +450,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      *                listeners.
      */
     public void add(double x, Number y, boolean notify) {
-        add(new Double(x), y, notify);
+        add(Double.valueOf(x), y, notify);
     }
 
     /**
@@ -750,7 +750,7 @@ public class XYSeries extends Series implements Cloneable, Serializable {
      * @since 1.0.10
      */
     public XYDataItem addOrUpdate(double x, double y) {
-        return addOrUpdate(new Double(x), new Double(y));
+        return addOrUpdate(Double.valueOf(x), Double.valueOf(y));
     }
 
     /**
