@@ -40,7 +40,7 @@
 
 package org.jfree.data.general;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
@@ -50,9 +50,9 @@ import java.io.ObjectInputStream;
 import java.io.ObjectOutput;
 import java.io.ObjectOutputStream;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertSame;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertSame;
 
 
 
@@ -87,10 +87,10 @@ public class DefaultKeyedValuesDatasetTest  {
     public void testSerialization() throws IOException, ClassNotFoundException {
 
         DefaultKeyedValuesDataset d1 = new DefaultKeyedValuesDataset();
-        d1.setValue("C1", new Double(234.2));
+        d1.setValue("C1", Double.valueOf(234.2));
         d1.setValue("C2", null);
-        d1.setValue("C3", new Double(345.9));
-        d1.setValue("C4", new Double(452.7));
+        d1.setValue("C3", Double.valueOf(345.9));
+        d1.setValue("C4", Double.valueOf(452.7));
 
 
             ByteArrayOutputStream buffer = new ByteArrayOutputStream();
